--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
                 <form action="#">
                     <div class="input-field">
-                        <input type="text" placeholder="Enter your email" required>
+                        <input type="text"id="login-email" placeholder="Enter your email" required>
                         <i class="uil uil-envelope icon"></i>
                     </div>
-                    <div class="input-field">
-                        <input type="password" class="password" placeholder="Enter your password" required>
+                    <div class="input-field ">
+                        <input type="password" id="login-password" class="password" placeholder="Enter your password" required>
                         <i class="uil uil-lock icon"></i>
                         <i class="uil uil-eye-slash showHidePw"></i>
                     </div>
@@ -40,7 +40,7 @@
                         <a href="#" class="text">Forgot password?</a>
                     </div>
 
-                    <div class="input-field button">
+                    <div class="input-field button "id="login-btn">
                         <input type="button" value="Login">
                     </div>
                 </form>
@@ -57,22 +57,17 @@
                 <span class="title">Registration</span>
 
                 <form action="#">
-                    <div class="input-field">
-                        <input type="text" placeholder="Enter your name" required>
+                    <div class="input-field ">
+                        <input type="text" id="signup-name" placeholder="Enter your name" required>
                         <i class="uil uil-user"></i>
                     </div>
-                    <div class="input-field">
-                        <input type="text" placeholder="Enter your email" required>
+                    <div class="input-field ">
+                        <input type="text" id="signup-email"placeholder="Enter your email" required>
                         <i class="uil uil-envelope icon"></i>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="password" placeholder="Create a password" required>
+                        <input type="password" id="signup-password" class="password" placeholder="Create a password" required>
                         <i class="uil uil-lock icon"></i>
-                    </div>
-                    <div class="input-field">
-                        <input type="password" class="password" placeholder="Confirm a password" required>
-                        <i class="uil uil-lock icon"></i>
-                        <i class="uil uil-eye-slash showHidePw"></i>
                     </div>
 
                     <div class="checkbox-text">
@@ -82,7 +77,7 @@
                         </div>
                     </div>
 
-                    <div class="input-field button">
+                    <div class="input-field button" id="signup-btn">
                         <input type="button" value="Signup">
                     </div>
                 </form>
